--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         let auth = null;
 
         try {
-            if (firebaseConfig.apiKey !== "AIzaSyDWmy__e9_7YbhBTJNvLvGVglj-fOTFWMg") {
+            if (firebaseConfig.apiKey !== "YOUR_API_KEY") {
                 const app = initializeApp(firebaseConfig);
                 db = getFirestore(app);
                 auth = getAuth(app);
