--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         ::-webkit-scrollbar-thumb { background: #00c8b7; border-radius: 4px; }
         ::-webkit-scrollbar-thumb:hover { background: #00a092; }
 
-        /* [修复] 公告連結樣式：確保連結有顏色且可點擊 */
+        /* [修復] 公告連結樣式：確保連結有顏色且可點擊 */
         .news-content a {
             color: #00c8b7; 
             text-decoration: underline;
