--- a/index.html
+++ b/index.html
@@ -254,12 +254,12 @@
             announcements: [
                 { 
                     id: 'static_1', 
-                    title_zh: '114學年度金勾盃歌唱比賽時程表', 
-                    title_en: 'Jingle Bells Singing Contest Schedule', 
+                    title_zh: '學生會連結樹', 
+                    title_en: 'Student Union Link Tree', 
                     tag_zh: '活動', tag_en: 'Event', 
-                    date: '2025-12-24',
-                    content_zh: 'https://www.pksh.ylc.edu.tw/ischool/news/attached/25990/PDF_FILE_LINK.pdf', 
-                    content_en: 'https://www.pksh.ylc.edu.tw/ischool/news/attached/25990/PDF_FILE_LINK.pdf'
+                    date: '2026-01-01',
+                    content_zh: 'https://linktr.ee/pkshsu?utm_source=ig&utm_medium=social&utm_content=link_in_bio&fbclid=PAb21jcAPC4qRleHRuA2FlbQIxMQBzcnRjBmFwcF9pZA81NjcwNjczNDMzNTI0MjcAAaeHqdgPGR_-3r8dZkSNWf5ppn5iFKdKdgi26JypXij6uoGGQUrU6CP1NAXAig_aem_CFVbEBehnQMXtEfUGpJ7LA', 
+                    content_en: 'https://linktr.ee/pkshsu?utm_source=ig&utm_medium=social&utm_content=link_in_bio&fbclid=PAb21jcAPC4qRleHRuA2FlbQIxMQBzcnRjBmFwcF9pZA81NjcwNjczNDMzNTI0MjcAAaeHqdgPGR_-3r8dZkSNWf5ppn5iFKdKdgi26JypXij6uoGGQUrU6CP1NAXAig_aem_CFVbEBehnQMXtEfUGpJ7LA'
                 }
             ],
             confessionWall: [
